--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,10 +42,6 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 # Json error handler
 play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandler"
 
-# Play Modules
-play.modules.enabled += "config.Module"
-
-
 # The application languages
 # ~~~~~
 play.i18n.langs = ["en"]
@@ -71,12 +67,11 @@ play.http.router = prod.Routes
 controllers {
   # 300 is the default, you may need to change this according to your needs
   confidenceLevel = 300
-
-  controllers.MicroserviceHelloWorldController = {
-    needsAuth = false
-    needsLogging = false
-    needsAuditing = false
-  }
+    com.kenshoo.play.metrics.MetricsController = {
+      needsAuth = false
+      needsLogging = false
+      needsAuditing = false
+    }
 }
 
 # Metrics plugin settings - graphite reporting is configured on a per env basis
