--- a/conf/application.conf
+++ b/conf/application.conf
@@ -87,7 +87,7 @@ metrics {
 # Microservice specific config
 
 auditing {
-  enabled = true
+  enabled = false
   traceRequests = true
   consumer {
     baseUri {
